<resources>
    <string name="app_name">CoAP Thermometer</string>
    <string name="app_subtitle">CoAP Server for mobile Sensors</string>

    <string name="ip_label">IP:</string>
    <string name="server_label">Overall Server Status</string>
    <string name="sensors_label">Resource Settings</string>

    <!--Sensor Labels-->
    <string name="gps_label">Location</string>
    <string name="lat_label">Latitude</string>
    <string name="long_label">Longitude</string>
    <string name="noise_label">Ambient Noise</string>
    <string name="noise_unit">Generic Unit</string>
    <string name="noise_meter_label">0 – 32.768</string>
    <string name="light_label">Ambient Light</string>
    <string name="light_unit">Lux</string>
    <string name="light_meter_label">0 – 200K (log scale)</string>
    <string name="pressure_label">Ambient Pressure</string>
    <string name="pressure_unit">hPa</string>
    <string name="pressure_meter_label">950 – 1050</string>


    <!--Button Labels-->
    <string name="server_on">Server ON</string>
    <string name="server_off">Server OFF</string>

    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="ssp_label">Proxy (SSP):</string>
    <string name="ssp_settings">Configure SSP</string>
    <string name="ssp_registration">Register at SSP</string>
    <string name="ssp_hint">Hostname or IP</string>
</resources>
