<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:keepScreenOn="true">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextAppearance="@style/AppTitle"
            app:subtitleTextAppearance="@style/AppSubTitle"
            app:contentInsetStart="0dp"/>

    <!--Server-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView style="@style/ResourceHeading"
                android:id="@+id/server_label"
                android:text="@string/server_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
            />

            <RadioGroup
                android:id="@+id/radgroup_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <RadioButton
                    android:id="@+id/rad_server_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"
                    />

                <RadioButton
                    android:id="@+id/rad_server_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off"
                    android:checked="true"
                    />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/ip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:text="@string/ip_label"
                />

            <TextView
                android:id="@+id/ip_txt"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />

            <TextView
                android:id="@+id/ssp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:text="@string/ssp_label"
                android:layout_marginLeft="5dp"
                />

            <TextView
                android:id="@+id/ssp_txt"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
        </LinearLayout>

    </LinearLayout>

    <!--Sensors Title-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:weightSum="2">-->

        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="2px"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:background="@drawable/line"-->
            <!--/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="5dp"-->
            <!--android:background="@drawable/rectangle"-->
            <!--android:textColor="#000000"-->
            <!--android:text="@string/sensors_label"-->
            <!--/>-->

        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="2px"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:background="@drawable/line"-->
            <!--/>-->

    <!--</LinearLayout>-->

    <!--Make the rest scrollable-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <!--Light-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:background="@color/bg_light_grey_2">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <TextView style="@style/ResourceHeading"
                            android:id="@+id/light_label"
                            android:text="@string/light_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            />

                        <RadioGroup
                            android:id="@+id/radgroup_light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true">

                            <RadioButton
                                android:id="@+id/rad_light_on"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/on"
                                />

                            <RadioButton
                                android:id="@+id/rad_light_off"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/off"
                                android:checked="true"
                                />
                        </RadioGroup>
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/light_unit"
                                android:layout_gravity="center_vertical"
                                android:layout_marginBottom="2dp"
                                />

                            <EditText
                                android:id="@+id/light_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:background="@drawable/rounded_rectangle"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:singleLine="true"
                                android:padding="5dp"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                />
                        </LinearLayout>

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="1dp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/light_meter_label"
                                android:layout_gravity="center_vertical"
                                android:layout_marginBottom="2dp"
                                />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="fill_parent">

                                <ProgressBar
                                    android:id="@+id/light_prb"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    style="@android:style/Widget.ProgressBar.Horizontal"
                                />

                            </LinearLayout>
                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
